templates/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: { { .values.releaseName } }-https-gateway
  namespace: { { .values.namespace } }
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: { { .values.releaseName } }-cert-tls
      hosts:
        - { { .values.dnsName } }
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-https
  namespace: grafana
spec:
  hosts:
    - { { .values.dnsName } }
  gateways:
    - { { .values.releaseName } }-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: { { .values.releaseName } }
            port:
              number: 80
